--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -48,5 +48,5 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
         with:
           # 部署文档
-          branch: blog_pages
+          branch: blog
           folder: src/.vuepress/dist
